[package]
name = "tiphia-plugin-authenticator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = "0.4"
hmac = "0.12"
qrcode = "0.14"
rand = "0.8"
sea-orm = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tiphia-core = { path = "../../crates/tiphia-core" }
tracing = "0.1"
urlencoding = "2"