[package]
name = "tiphia-plugin-comment-mail-push"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls", "hostname"] }
rand = "0.8"
sea-orm = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiphia-core = { path = "../../crates/tiphia-core" }
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
utoipa = "5"