[package]
name = "tiphia-plugin-links"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiphia-core = { path = "../../crates/tiphia-core" }
tracing = "0.1"
