[package]
name = "tiphia-typecho-import"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.13"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tiphia-core = { path = "../../crates/tiphia-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
